Fix plugin configuration prefix